# 5-Staged-Pipelined-Processor

./: .gitignore  CONTRIBUTING.md  README.md  compile.sh  memobrex  memory_data.mem  processor-so8anon  pyproject.toml  walkthrough.md
Test Cases/: BranchPrediction.asm  Memory.asm  TwoOperand.asm  test5_memory.asm  test6_interrupts.asm  test7_all.asm
assembler/: __init__.py  assembler.py  isa_constants.py  readme.md  simulator.py
assembler/examples/: test1_basic.asm  test5_memory.asm  test6_interrupts.asm  test7_all.asm  test8_complex.asm
docs/: ARCHITECTURE.md  interface_spec_member3.md
rtl/common/: memory_access_control_unit.vhd
rtl/control/: BLOCK_DIAGRAM.md
rtl/execute/: alu.vhd  execute_stage.vhd  register_file.vhd
simulation/: processor.mpf  transcript
simulation/scripts/: memory_random_generator.py  run_all_control_tests.do  run_all_control_tests.do.backup  run_fetch_decode_execute_memory_top.do  run_fetch_decode_execute_memory_writeback_top.do  run_fetch_decode_execute_top.do  run_fetch_decode_top.do  run_fetch_memory_top.do  run_forwarding_unit_test.do  run_memory_stage_test.do  run_memory_test.do  run_optimizer.do  run_processor_top.do  run_tests.do  run_tests.sh  run_writeback_stage_test.do
simulation/wave_configs/: execute_wave_config.do
src/: fetch_decode_execute_memory_top.vhd  fetch_decode_execute_memory_writeback_top.vhd  fetch_decode_execute_top.vhd  fetch_decode_top.vhd  fetch_memory_top.vhd  processor_top.vhd  system_top.vhd
testbench/: tb_alu.vhd  tb_register_file.vhd
tests/: run_tests.py  test3_subroutine.asm
(+94 files in other folders)
