[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risc-assembler"
version = "0.1.0"
description = "Assembler and Simulator for 5-Stage RISC Processor"
authors = [{name = "Youssef Noser"}]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["assembler"]